--- a/public/components/cardList/styles.css
+++ b/public/components/cardList/styles.css
@@ -1,4 +1,5 @@
 .cardList{
     padding: 30px;
     padding-top: 60px;
+    min-height: 800px;
 }
